--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,14 @@ img {
   text-align: center;
 }
 
+/* Degradados */
+.degradado-verde {
+  color: transparent;
+  background: linear-gradient(to right, var(--primario) 0%, var(--secundario) 100% );
+  -webkit-background-clip: text;
+  background-clip: text;
+}
+
 /* Header */
 .header {
   background-color: var(--negro);
@@ -84,9 +92,8 @@ img {
     padding: 0;
   }
 }
-.texto-header p{
+.texto-header p {
   margin: 0;
-
 }
 .tagline-producto {
   font-size: 3rem;
@@ -97,16 +104,15 @@ img {
   font-size: 6rem;
   margin: 0;
 }
-@media (min-width: 768px ){ 
-  .nombre-producto{
+@media (min-width: 768px) {
+  .nombre-producto {
     font-size: 10rem;
-   
+
     line-height: 1;
   }
-  
 }
 
-.precio-producto span{
+.precio-producto span {
   font-size: 6rem;
   font-weight: 900;
 }
