--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,11 @@ img {
 /* Degradados */
 .degradado-verde {
   color: transparent;
-  background: linear-gradient(to right, var(--primario) 0%, var(--secundario) 100% );
+  background: linear-gradient(
+    to right,
+    var(--primario) 0%,
+    var(--secundario) 100%
+  );
   -webkit-background-clip: text;
   background-clip: text;
 }
@@ -115,4 +119,41 @@ img {
 .precio-producto span {
   font-size: 6rem;
   font-weight: 900;
+}
+
+/* Iconos */
+.iconos{
+  padding: var(--separacion) 0;
+
+}
+@media (min-width: 768px) {
+  .iconos {
+    display: flex;
+    gap: 2rem;
+  }
+}
+.icono{
+  text-align: center;
+  margin-bottom: calc(var(--separacion)/2);
+
+}
+.icono:last-of-type{
+  margin: 0;
+}
+@media (min-width: 768px ){ 
+  .icono{
+    margin: 0;
+  }
+  
+}
+.icono img{
+  width: 5rem;
+  margin: 0 auto;
+
+}
+.icono h3{
+  color: var(--primario);
+  text-transform: uppercase;
+  margin-top: calc(var(--separacion)/2);
+
 }
